<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    tools:context="com.marktony.fanfouhandpick.ui.AboutActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:text="@string/app_name"
                        android:textColor="@color/colorPrimary"
                        android:gravity="center_vertical"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:text="@string/version"
                        android:gravity="center_vertical"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:orientation="vertical"
                        android:id="@+id/layout_rate">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            android:text="@string/rate"
                            android:gravity="center_vertical" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            android:gravity="top"
                            android:textSize="@dimen/small_text_size"
                            android:text="@string/rate_description"/>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:text="@string/author"
                        android:textColor="@color/colorPrimary"
                        android:gravity="center_vertical"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            android:text="@string/author_name"
                            android:gravity="center_vertical"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            android:text="@string/author_description"
                            android:textSize="@dimen/small_text_size"/>

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:id="@+id/tv_gitHub"
                        android:text="@string/follow_me_on_github"
                        android:gravity="center_vertical"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:text="@string/support"
                        android:textColor="@color/colorPrimary"
                        android:gravity="center_vertical"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/layout_feedback"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            android:text="@string/feedback"
                            android:gravity="center_vertical"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            android:gravity="top"
                            android:text="@string/feedback_description"
                            android:textSize="@dimen/small_text_size"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/layout_donate">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            android:text="@string/donate"
                            android:gravity="center_vertical"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            android:gravity="top"
                            android:text="@string/donate_description"
                            android:textSize="@dimen/small_text_size"/>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>